crates/ty_python_semantic/resources/mdtest/snapshots/async_for.md_-_Async_-_Error_cases_-_Wrong_signature_for_…_(b614724363eec343).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: async_for.md - Async - Error cases - Wrong signature for `__anext__`
mdtest path: crates/ty_python_semantic/resources/mdtest/loops/async_for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import reveal_type
 2 | 
 3 | class AsyncIterator:
 4 |     async def __anext__(self, arg: int) -> int:  # wrong
 5 |         return 42
 6 | 
 7 | class AsyncIterable:
 8 |     def __aiter__(self) -> AsyncIterator:
 9 |         return AsyncIterator()
10 | 
11 | async def foo():
12 |     # error: [not-iterable] "Object of type `AsyncIterable` is not async-iterable"
13 |     async for x in AsyncIterable():
14 |         reveal_type(x)  # revealed: int
```

# Diagnostics

```
error[not-iterable]: Object of type `AsyncIterable` is not async-iterable
  --> src/mdtest_snippet.py:13:20
   |
11 | async def foo():
12 |     # error: [not-iterable] "Object of type `AsyncIterable` is not async-iterable"
13 |     async for x in AsyncIterable():
   |                    ^^^^^^^^^^^^^^^
14 |         reveal_type(x)  # revealed: int
   |
info: Its `__aiter__` method returns an object of type `AsyncIterator`, which has an invalid `__anext__` method
info: Expected signature for `__anext__` is `def __anext__(self): ...`
info: rule `not-iterable` is enabled by default

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:14:21
   |
12 |     # error: [not-iterable] "Object of type `AsyncIterable` is not async-iterable"
13 |     async for x in AsyncIterable():
14 |         reveal_type(x)  # revealed: int
   |                     ^ `int`
   |

```
